[package]
name = "nn"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0   # Disable optimization to make debugging easier

[dependencies]
arc = "0.0.1"
blas-src = "0.11.1"
byteorder = "1.5.0"
flate2 = "1.1.0"
matrix_display = "1.0.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.8.5"
rayon = "1.10.0"
sync = "0.1.0"
tokio = { version = "1.44.1", features = ["full"] }

